--- a/api/package.json
+++ b/api/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "main": "app.ts",
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/app.js"
+    "start": "tsc && node dist/app.js"
   },
   "keywords": [],
   "author": "",
