--- a/api/package.json
+++ b/api/package.json
@@ -18,7 +18,8 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.18.0",
-    "mongoose": "^8.17.1"
+    "mongoose": "^8.17.1",
+    "redis": "^5.8.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
